--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -284,6 +284,7 @@ I understand that my work relates to the rights and obligations
 \include{03-nonautoregressive}
 \include{04-nmt-ctc}
 \include{05-experiments}
+\include{06-conclusions}
 
 %
 % TEXT END
