--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -6,90 +6,85 @@ TODO tohle se musí přepsat
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{libovicky2016cuni}
+\noindent\bibentry{libovicky-etal-2016-cuni}
 \begin{itemize}[noitemsep,topsep=0pt]
 
     \item The paper describes a submission to the WMT16 which describes our early
-        experiments with \gls{mmt}. This paper is partially discussed in
-        Sections~\ref{sec:mmtsota} and~\ref{sec:aclattstrat}.
+        experiments with \gls{mmt}.
 
-    \item Citations (without self-citations): 28
+    \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{libovicky2017attention}
+\noindent\bibentry{libovicky-helcl-2017-attention}
 \begin{itemize}[noitemsep,topsep=0pt]
 
   \item The paper introduces techniques for combining multiple different inputs in
-      sequence-to-sequence learning using \glspl{rnn}. Content of this paper is
-        discussed mainly in Section~\ref{sec:aclattstrat}.
+    sequence-to-sequence learning using \glspl{rnn}.
 
   \item Awarded as an Outstanding Paper at ACL~2017 and ÚFAL Best Paper 2017.
 
-  \item Citations (without self-citations): 19
+  \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{helcl2017neural}
+\noindent\bibentry{helcl-libovicky-2017-neural}
 \begin{itemize}[noitemsep,topsep=0pt]
 
   \item This paper introduces a software tool \emph{Neural Monkey} which was
       used for all the experiments in this thesis.
 
-  \item Citations (without self-citations): 22
+  \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 \newpage
-\noindent\bibentry{helcl2017cuni}
+\noindent\bibentry{helcl-libovicky-2017-cuni}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item A submission to WMT17 \gls{mmt} task. The submission tests
-      architectures proposed in the previous paper in a more competitive setup
-        and discusses techniques for acquiring additional training data which
-        are discussed in Section~\ref{sec:technical}.
+\item A submission to WMT17 \gls{mmt} task.
 
-  \item Citations (without self-citations): 7
+  \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{helcl2018neural}
+\noindent\bibentry{helcl-etal-2018-neural}
 \begin{itemize}[noitemsep,topsep=0pt]
 
   \item A paper summarizing the Neural Monkey software at the beginning of
       2018.
 
-  \item Citations (without self-citations): 1
+  \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{libovicky2018input}
+\noindent\bibentry{libovicky-etal-2018-input}
 \begin{itemize}[noitemsep,topsep=0pt]
 
   \item The paper introduces techniques for input combinations in
       sequence-to-sequence models with self-attentive encoder and decoder.
 
-  \item Citations (without self-citations): 0
+  \item Citations (without self-citations): \JH{todo}
 
 \end{itemize}\vspace{3mm}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{helcl2018cuni}
+\noindent\bibentry{helcl-etal-2018-cuni}
 \begin{itemize}[noitemsep,topsep=0pt]
 
   \item A paper summarizing the Neural Monkey software at the beginning of
-      2018.
+      2018. \JH{todo}
 
   \item Citations (without self-citations): 0
 
